# clausy

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  ROADMAP.md  SECURITY.md  VISION.md  docker-compose.yml  install.sh  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
clausy/: alerts.py  browser.py  browser_runtime.py  cli.py  filter.py  first_run_browser.py  install.py  json_mode.py  openclaw_install.py  output_mode.py  server.py  service_install.py  tool_call_validator.py
clausy/api_providers/: __init__.py  anthropic.py  base.py  gemini.py  ollama.py  openai.py  openrouter.py  router.py  stubs.py
clausy/providers/: __init__.py  base.py  chatgpt.py  claude.py  deepseek.py  gemini_web.py  grok.py  perplexity.py  poe.py  registry.py
clausy/websearch/: __init__.py  browser.py  service.py
docs/: 2026-03-11-anonymous-provider-validation.md  DECISIONS.md  HEARTBEAT_LOG.md  PLAN.md  STATUS.md  TODO.md  provider-anon-validation-2026-03-11.md  runbook-browser-runtime.md
docs/marketing/: 2026-03-01-execution-grade-marketing-strategy.md
examples/: curl_nonstream.sh  curl_stream.sh
scripts/: docker-start.sh  inspect_ui.py  openclaw_install_clausy.py  release-gate.sh
tests/: README.md  conftest.py  test_anon_browser_toggle.py  test_api_provider_anthropic.py  test_api_provider_gemini.py  test_api_provider_ollama.py  test_api_provider_openrouter.py  test_api_provider_routing.py  test_browser_runtime.py  test_chat_completions_contracts.py  test_chatgpt_provider_readiness.py  test_cli_config_ux.py  test_cli_entrypoint.py  test_docker_start.py  test_filter_env_coercion.py  test_filter_env_int_parsing.py  test_first_run_browser.py  test_install_cli.py  test_install_sh_entrypoint.py  test_keyword_alerts.py  test_models_endpoint.py  test_openclaw_install.py  test_openclaw_install_schema.py  test_ops_endpoints.py  test_output_mode.py  test_profanity_filter.py  test_provider_registry.py  test_server_cdp_port_env.py  test_server_env_bounded_callsites.py  test_server_env_int_parsing.py  test_server_filter_provider_regressions.py  test_server_startup_provider_open.py  test_service_install.py  test_tool_call_argument_validation.py  test_tool_call_validator_parity.py  test_websearch_env_coercion.py
(+40 files in other folders)
