[project]
name = "clausy"
version = "0.1.0"
description = "OpenAI-compatible gateway to web-based LLM UIs via Playwright"
requires-python = ">=3.10"
dependencies = ["flask", "playwright"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
markers = [
  "contract: API contract tests for /v1/chat/completions",
  "filtering: profanity/secret filtering behavior",
  "routing: provider selection behavior",
]
